hello-service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  selector:
    app: helloworld
  type: NodePort  
  ports:
  - name: helloworld-service
    port: 5000
    targetPort: 5000
